--- a/views/general_dashboard.html
+++ b/views/general_dashboard.html
@@ -22,7 +22,7 @@
 
     <main class="container my-4">
         <section id="featured-listings">
-            <h2 class="mb-3">Featured Listings</h2>
+            <h2 class="mb-3">Posts</h2>
             <div class="row" id="listings-container">
                 <!-- Listings will be dynamically added here -->
             </div>
@@ -47,45 +47,14 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
-                    <h5>House Rental Website</h5>
-                    <p>A university group project for Systems Analysis and Design</p>
-                    <p>© 2024 Hanoi University of Science and Technology</p>
-                </div>
-                <div class="col-md-3">
-                    <h5>Project Team</h5>
-                    <ul>
-                        <li>Hagen Christian Dähne 2024T0038</li>
-                        <li>Le Anh Tuan 20225559</li>
-                        <li>Mai Viet Bao 20225474</li>
-                        <li>Nguyen Phuong Linh 20225547</li>
-                        <li>Pham Nguyen Hai Nhi 20225549</li>
-                        <li>Phan Thu Ha 20225571</li>
-                        <li>Tran Thi Thuong Van 20225590</li>
-                    </ul>
-                </div>
-                <div class="col-md-3">
-                    <h5>Technologies Used</h5>
-                    <ul>
-                        <li>HTML5</li>
-                        <li>CSS3</li>
-                        <li>JavaScript</li>
-                        <li>Node.js</li>
-                        <li>Express.js</li>
-                        <li>Bootstrap</li>
-                    </ul>
-                </div>
-            </div>
-            <hr>
-            <div class="row">
                 <div class="col-12 text-center">
-                    <p class="mb-0">This is a fictional website created for educational purposes only.</p>
+                    <p class="mb-0">This is a demo website.</p>
                 </div>
             </div>
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="/js/general_dashboard-script.js"></script>
 </body>
 </html>
