--- a/views/general_dashboard.html
+++ b/views/general_dashboard.html
@@ -31,7 +31,7 @@
 
     <!-- Modal for displaying listing details -->
     <div class="modal fade" id="detailsModal" tabindex="-1" aria-labelledby="detailsModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="detailsModalLabel">Post Details</h5>
