--- a/views/general_dashboard.html
+++ b/views/general_dashboard.html
@@ -21,11 +21,46 @@
     </header>
 
     <main class="container my-4">
+        <section id="filters" class="mb-4">
+            <!-- Filter Button -->
+            <button class="btn btn-outline-primary mb-3" type="button" data-bs-toggle="collapse" data-bs-target="#filter-dropdown" aria-expanded="false" aria-controls="filter-dropdown">
+                Filter Posts
+            </button>
+        
+            <!-- Collapsible Filter Form -->
+            <div class="collapse" id="filter-dropdown">
+                <form id="filter-form" class="d-flex flex-column gap-3">
+                    <div class="row g-2">
+                        <div class="col-6">
+                            <label for="min-price" class="form-label">Min Price:</label>
+                            <input type="number" id="min-price" class="form-control" placeholder="Min">
+                        </div>
+                        <div class="col-6">
+                            <label for="max-price" class="form-label">Max Price:</label>
+                            <input type="number" id="max-price" class="form-control" placeholder="Max">
+                        </div>
+                    </div>
+                    <div class="d-flex gap-2">
+                        <button type="submit" class="btn btn-primary">Filter</button>
+                        <button type="button" id="reset-filters" class="btn btn-secondary">Reset</button>
+                    </div>
+                </form>
+            </div>
+        </section>
+        
+
         <section id="featured-listings">
             <h2 class="mb-3">Posts</h2>
-            <div class="row" id="listings-container">
-                <!-- Listings will be dynamically added here -->
-            </div>
+            <form id="compare-form">
+                <div class="row" id="listings-container">
+                    <!-- Listings will be dynamically added here -->
+                </div>
+                <div class="d-flex justify-content-end mt-3">
+                    <button type="submit" class="btn btn-success" id="compare-selected" disabled>
+                        Compare Selected
+                    </button>
+                </div>
+            </form>
         </section>
     </main>
 
