feat: added user auth, made some changes

--- a/views/comparison.html
+++ b/views/comparison.html
@@ -29,9 +29,9 @@
             </tbody>
         </table>
         <div class="d-flex justify-content-end">
-            <a href="/" class="btn btn-secondary">Back to Dashboard</a>
+            <a onclick="redirectDependingOnUser()" class="btn btn-secondary">Back to Dashboard</a>
         </div>
     </main>
-    <script src="/js/compare-script.js"></script>
+    <script type="module" src="/js/compare-script.js"></script>
 </body>
 </html>
