--- a/views/register.html
+++ b/views/register.html
@@ -101,8 +101,8 @@
                 <label for="role" class="form-label">Role</label>
                 <select class="form-select" id="role" name="role">
                     <option value="" disabled selected>Select your role</option>
-                    <option value="user">Renter</option>
-                    <option value="owner">Owner</option>
+                    <option value="Renter">Renter</option>
+                    <option value="Owner">Owner</option>
                 </select>
             </div>            
             <div class="mb-3">
